--- a/app/globals.css
+++ b/app/globals.css
@@ -111,11 +111,11 @@
   }
 
   html {
-    @apply scroll-smooth;
+    @apply scroll-smooth overflow-x-hidden;
   }
 
   body {
-    @apply bg-background text-foreground antialiased;
+    @apply bg-background text-foreground antialiased overflow-x-hidden;
     text-rendering: optimizeLegibility;
   }
 }
